add browse list html & list api

--- a/css/app.css
+++ b/css/app.css
@@ -43,6 +43,9 @@ select:-webkit-autofill {
 .col-skyblue {
   color: lightblue;
 }
+.bg-darkgray {
+  background: #b3b3b3;
+}
 .bg-brownness {
   color: #c9caaa;
 }
@@ -57,6 +60,22 @@ select:-webkit-autofill {
 }
 .mar-lt-five {
   margin-left: 5px;
+}
+.mar-tp-five {
+  margin-top: 5px;
+}
+.mar-bt-five {
+  margin-bottom: 5px;
+}
+.mar-tp-eight {
+  margin-top: 8px;
+}
+.mar-bt-eight {
+  margin-bottom: 8px;
+}
+.mar-tb-eight {
+  margin-top: 8px;
+  margin-bottom: 8px;
 }
 .mar-tb-twenty {
   margin-top: 20px;
@@ -788,7 +807,9 @@ body {
 #createOrg .first-step input,
 #createOrg .first-step .save,
 #createOrg .second-step > input,
-#createOrg .second-step .save {
+#createOrg .second-step .save,
+#userSet .new-pwd input,
+#userSet .new-pwd .save {
   width: 100%;
   height: 40px;
   line-height: 40px;
@@ -799,7 +820,8 @@ body {
   background: #d7d7d7;
 }
 #createOrg .first-step .save,
-#createOrg .second-step .save {
+#createOrg .second-step .save,
+#userSet .new-pwd .save {
   color: #fff;
   background: #b3b3b3;
   font-size: 16px;
@@ -886,7 +908,6 @@ body {
 }
 #userSet .content,
 #userSet .title {
-  width: 80%;
   margin: 0 auto;
 }
 #userSet .title {
@@ -896,14 +917,8 @@ body {
   font-size: 16px;
 }
 #userSet .user-nav {
-  background: #fff;
-  color: #fff;
   text-align: center;
   border: none;
-}
-#userSet .user-nav li {
-  width: 33.3%;
-  border-left: 1px solid #eaeaea;
 }
 #userSet .user-nav li:first-child {
   border: none;
@@ -922,18 +937,12 @@ body {
 #userSet .user-nav > li.active,
 .user-nav > li.active:focus,
 .user-nav > li.active:hover {
-  background: lightblue;
+  background: #555;
 }
 #userSet .user-nav > li.active > a,
 .user-nav > li.active > a:focus,
 .user-nav > li.active > a:hover {
   color: #fff;
-}
-#userSet .user-content {
-  margin-top: 20px;
-  padding: 20px 12px;
-  background: #fff;
-  border-radius: 2px;
 }
 #userSet .tips {
   width: 40%;
@@ -952,34 +961,30 @@ body {
   margin-right: 5px;
 }
 #userSet .email {
-  width: 65%;
-  padding: 20px 24px;
-  border: 1px solid #b3b3b3;
+  font-size: 0;
 }
 #userSet .email input {
-  width: 70%;
+  width: 72%;
   padding: 6px 12px;
   font-size: 16px;
-  border: 1px solid #d7d7d7;
-  border-radius: 3px;
-  margin-right: 10px;
+  background: #eaeaea;
+  border-radius: 5px;
+  margin-right: 3%;
 }
 #userSet .add-email {
-  padding: 6px 12px;
-  background: lightblue;
-  color: #fff;
-  border-radius: 3px;
-  font-size: 16px;
+  padding: 30px 0;
+  background: #d7d7d7;
 }
 #userSet .emails {
-  margin-top: 20px;
+  margin-top: 15px;
   border: 1px solid #d7d7d7;
   border-radius: 3px;
 }
 #userSet .emails li {
   width: 100%;
-  padding: 15px 8px;
+  padding: 8px 12px;
   font-size: 0;
+  background: #fff;
 }
 #userSet .emails li:nth-child(2n) {
   background: #eaeaea;
@@ -1038,6 +1043,21 @@ body {
   color: #fff;
   font-size: 16px;
   border-radius: 3px;
+}
+#userInfo .add {
+  background: #ff5400;
+  width: 25%;
+  padding: 5px 0;
+  color: #fff;
+  font-size: 16px;
+  border-radius: 5px;
+}
+#userSet .new-pwd {
+  background: #eaeaea;
+  padding: 30px 0;
+}
+#userSet .account {
+  background: #d7d7d7;
 }
 /* user end */
 /* sign in & sign up start */
@@ -1258,6 +1278,52 @@ body {
   #access .header .text {
     bottom: 30px;
   }
+}
+#access .browse .space {
+  margin-bottom: 20px;
+  overflow: hidden;
+  width: 100%;
+  font-size: 14px;
+  border-left: 5px solid transparent;
+}
+#access .browse .info li {
+  float: left;
+  background: #eaeaea;
+  padding: 24px 0;
+  text-align: center;
+}
+#access .browse .space:hover {
+  border-left: 5px solid lightblue;
+}
+#access .browse .info .name,
+#access .browse .info .star {
+  margin-right: 2px;
+}
+#access .browse .info .name {
+  width: calc(43% - 4px);
+  width: -webkit-calc(43% - 4px);
+}
+#access .browse .info .star,
+#access .browse .info .download {
+  width: 20%;
+  padding: 33px 0;
+}
+#access .browse .info .detail {
+  width: 17%;
+  padding: 33px 0;
+  background: #b3b3b3;
+  color: #fff;
+}
+#access .browse .info .active {
+  background: lightblue;
+}
+#access .browse .name img {
+  width: 60px;
+  height: 60px;
+  margin: 0 12px;
+}
+#access .browse .name .text {
+  display: block;
 }
 /* sign in & sign up end */
 /*# sourceMappingURL=app.css.map */
