--- a/templates/common/login.html
+++ b/templates/common/login.html
@@ -61,6 +61,44 @@
       <button class="space sign-in" (click)="resetPwd()">Save</button>
     </div>
   </div>
+  <div class="row" class="browse" *ngIf="active==='browse'">
+    <div class="col-xs-12 col-md-offset-1 col-md-10">
+      <div class="row">
+        <div class="col-xs-12 col-md-6" *ngFor="let item of browseList; let i = index">
+          <ul class="space info" (mouseover)="activeHover(i)" (mouseout)="activeHover('')">
+            <li class="name">
+              <div class="over-hidden">
+                <div class="pull-left"><img src={{item.img}} /></div>
+                <div class="pull-left">
+                  <span class="text mar-tb-eight">{{item.name}}</span>
+                  <span class="text">{{item.desc}}</span>
+                </div>
+              </div>
+            </li>
+            <li class="star">
+              <div>
+                <div class="mar-bt-eight"><i class="fa fa-star"></i></div>
+                <div>{{item.stars}}</div>
+              </div>
+            </li>
+            <li class="download">
+              <div>
+                <div class="mar-bt-eight"><i class="fa fa-download"></i></div>
+                <div>{{item.pulls}}</div>
+              </div>
+            </li>
+            <li class="detail" [ngClass]="hover === i ? 'active' : '' ">
+              <div>
+                <div class="mar-bt-eight"><i class="fa fa-chevron-right"></i></div>
+                <div>Detail</div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  
   <div class="row footer">
     <p class="col-md-7 col-md-offset-1 col-xs-12 intro" >
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. A rerum vel est quae accusamus adipisci odio im. Ipsam.
@@ -75,7 +113,7 @@
   <div class="navbar">
     <div class="logo"><img src="img/opshub.png" /></div>
     <div class="menu">
-      <a href="javascript:void(0)" class="space">Browse</a>
+      <a href="javascript:void(0)" class="space" [ngClass]="active==='browse' ? 'active' : '' " (click)="changeNav('browse')">Browse</a>
       <a href="javascript:void(0)" class="space">Tutorial</a>
       <a href="javascript:void(0)" class="space">Docs</a>
       <a href="javascript:void(0)" class="space" [ngClass]="active==='login' ? 'active' : '' " (click)="changeNav('login')">Login</a>
