modify all color & all fontSize

--- a/less/font.less
+++ b/less/font.less
@@ -1,4 +1,8 @@
-@baseFontSize: 12px;
+@baseSize: 1.6rem; //20
+@smallSize: 2rem;  //24
+@middleSize: 2.4rem; //28
+@bigSize: 3.2rem; //36
+@bigPlusSize: 4.4rem; //48
 
 // 文本
 @textCenter: center;
