--- a/css/app.css
+++ b/css/app.css
@@ -4,7 +4,7 @@
   word-break: break-all;
 }
 a {
-  color: #000;
+  color: #191919;
 }
 a,
 a:hover,
@@ -35,16 +35,16 @@ select:-webkit-autofill {
   position: relative;
 }
 .col-orange {
-  color: #ff5400;
+  color: #E92C1A;
 }
 .col-gray {
-  color: #b3b3b3;
+  color: #474646;
 }
 .col-skyblue {
   color: lightblue;
 }
 .bg-darkgray {
-  background: #b3b3b3;
+  background: #CCCCCC;
 }
 .bg-brownness {
   color: #c9caaa;
@@ -106,16 +106,22 @@ select:-webkit-autofill {
   margin: 0;
 }
 html {
-  font-size: 62.5%;
+  font-size: 10px;
 }
 body {
-  font-size: 12px;
-  background: #F0EFF5;
+  font-size: 1.6rem;
+  background: #EEEEEE;
+  color: #191919;
+}
+#repoContent {
+  background: #DEDEDE;
+  width: 100%;
+  height: 100%;
 }
 /* index start */
 #header {
   overflow: hidden;
-  font-size: 14px;
+  font-size: 1.6rem;
   padding: 15px 12px;
   background: lightblue;
 }
@@ -169,7 +175,7 @@ body {
 }
 .content-two .space {
   display: inline-block;
-  font-size: 14px;
+  font-size: 1.6rem;
   vertical-align: bottom;
   width: 80%;
   margin-left: 10%;
@@ -181,7 +187,7 @@ body {
   width: calc(100% - 200px);
   width: -webkit-calc(100% - 200px);
   height: 250px;
-  border: 1px solid #b3b3b3;
+  border: 1px solid #DFDFDF;
 }
 .content-three {
   background: #fff;
@@ -209,14 +215,14 @@ body {
   border-radius: 24px;
   background: #d7d7d7;
   margin-left: 10px;
-  font-size: 14px;
+  font-size: 1.6rem;
 }
 /* index end */
 /* nav start */
 #nav {
   width: 100%;
   height: 44px;
-  background: #000;
+  background: #000611;
 }
 #nav .menu,
 #nav .user {
@@ -225,12 +231,10 @@ body {
 }
 #nav .menu a,
 #nav .user a {
-  font-size: 14px;
+  font-size: 1.6rem;
 }
-#nav a:hover,
-#nav a:active,
 #createRepo a:hover,
-#createRepo:active {
+#createRepo a:active {
   color: #fff;
   background: lightblue;
   border-radius: 2px;
@@ -251,9 +255,8 @@ body {
 #nav .menu li a,
 #nav .user > li > a {
   padding: 0 12px;
-  height: 28px;
-  line-height: 28px;
-  margin-top: 9px;
+  height: 44px;
+  line-height: 44px;
   margin-right: 12px;
   color: #fff;
 }
@@ -285,9 +288,8 @@ body {
   position: relative;
 }
 #nav .menu li .active {
-  color: #fff;
-  background: lightblue;
-  border-radius: 2px;
+  color: #3DA1E5;
+  border-bottom: 3px solid #3DA1E5;
 }
 #nav .user > li input {
   width: 100%;
@@ -296,7 +298,10 @@ body {
   padding: 0 5px;
   border-radius: 2px;
   background: #e7e7e7;
-  font-size: 14px;
+  font-size: 1.6rem;
+}
+#nav .user li .active {
+  color: #3DA1E5;
 }
 #nav .user > li input:focus {
   background: #fff;
@@ -307,14 +312,28 @@ body {
 #createRepo,
 #userSetting {
   width: 200px;
-  background: #eaeaea;
+  background: #A9A9A9;
   position: absolute;
-  top: 42px;
-  left: 0px;
+  top: 44px;
+  right: 0px;
   z-index: 10000;
+  display: none;
+}
+#createRepo li a:hover,
+#userSetting li a:hover {
+  background: #3DA1E5;
+  color: #fff;
+}
+#nav .user .show {
+  display: block;
+}
+@media screen and (max-width: 1100px) {
+  #nav .user .filter {
+    width: 170px;
+  }
 }
 @media screen and (max-width: 840px) {
-  #nav .user li:first-child {
+  #nav .user .filter {
     display: none;
   }
   #nav .user {
@@ -364,7 +383,6 @@ body {
 }
 #userSetting {
   width: 120px;
-  left: 12px;
 }
 #createRepo li,
 #createRepo li a,
@@ -382,7 +400,7 @@ body {
   width: 100%;
   height: 44px;
   line-height: 44px;
-  font-size: 14px;
+  font-size: 1.6rem;
 }
 #nav i {
   margin: 0 5px 0 10px;
@@ -403,7 +421,7 @@ body {
   border: 1px solid #eaeaea;
   border-radius: 24px 24px 24px 24px;
   padding: 0 12px;
-  font-size: 14px;
+  font-size: 1.6rem;
 }
 #repoList .filter-repo .search {
   position: absolute;
@@ -422,27 +440,27 @@ body {
 }
 #repoList .repo-left {
   height: 405px;
-  background: #eaeaea;
+  background: #F3F3F3;
   padding: 0;
-  border-radius: 3px;
 }
 #repoList .repo-left span {
   display: inline-block;
   width: 100%;
   padding: 12px 20px;
   text-overflow: ellipsis;
-  color: #fff;
+  font-size: 1.6rem;
+  color: #191919;
 }
 #repoList .repo-left span:first-child {
-  font-size: 16px;
-  border-radius: 3px 3px 0 0;
+  font-size: 2rem;
   cursor: pointer;
+  color: #fff;
 }
 #repoList .repo-left .bg-orange {
-  background: #ff5400;
+  background: #F77462;
 }
 #repoList .repo-left .bg-blue {
-  background: lightblue;
+  background: #3DA1E5;
 }
 #repoList .repo-body {
   padding-left: 5px;
@@ -453,25 +471,38 @@ body {
   width: -webkit-calc( (100% - 5px) /2);
   padding: 12px;
   margin-bottom: 5px;
-  background: #eaeaea;
+  background: #F3F3F3;
   vertical-align: top;
-  border-radius: 3px;
   height: 200px;
+  border-bottom: 5px solid transparent;
 }
 #repoList .repo-body a:hover {
-  border: 1px solid #ff5400;
+  border-bottom: 5px solid #3DA1E5;
 }
 #repoList .repo-body a:nth-child(2n) {
   margin-left: 5px;
 }
 #repoList .repo-body h3 {
   margin-top: 8px;
-  font-size: 20px;
+  font-size: 2rem;
+  color: #191919;
 }
 #repoList .repo-body h5 {
   font-size: 16px;
-  height: 40px;
+  height: 36px;
   overflow: hidden;
+  color: #474646;
+}
+@media screen and (max-width: 640px) {
+  #repoList .repo-body a {
+    width: 100%;
+  }
+  #repoList .repo-body a:nth-child(2n) {
+    margin-left: 0;
+  }
+  #repoList .repo-left {
+    height: 815px;
+  }
 }
 #repoList .star-fork {
   font-size: 20px;
@@ -491,8 +522,13 @@ body {
 }
 /* repo list end */
 /* repo create start */
+#newRepoContent {
+  width: 100%;
+  height: 100%;
+  background: #EEEEEE;
+}
 #newRepo {
-  margin-top: 60px;
+  padding-top: 60px;
 }
 #newRepo .guide {
   position: relative;
@@ -501,7 +537,7 @@ body {
   height: auto;
   width: 100%;
   padding-bottom: 50px;
-  border-left: 1px dashed #b3b3b3;
+  border-left: 2px dashed #919191;
 }
 #newRepo li:last-child {
   border: none;
@@ -513,26 +549,27 @@ body {
   line-height: 40px;
   text-align: center;
   border-radius: 5px;
-  font-size: 16px;
-  background: gainsboro;
+  font-size: 1.6rem;
+  background: #919191;
   color: #fff;
   vertical-align: top;
   position: relative;
   left: -20px;
 }
 .step-brown {
-  background: lightblue !important;
+  background: #3DA1E5 !important;
 }
 #newRepo li:last-child span {
   top: 5px;
 }
 #newRepo li b {
-  font-size: 16px;
+  font-size: 1.6rem;
   margin-top: 10px;
   font-weight: normal;
   display: inline-block;
   width: calc(100% - 52px);
   width: -webkit-calc(100% - 52px);
+  color: #545454;
 }
 #newRepo .info {
   padding: 0;
@@ -541,13 +578,13 @@ body {
 #newRepo textarea {
   width: 100%;
   padding: 10px;
-  font-size: 16px;
-  background: #d7d7d7;
+  font-size: 1.6rem;
+  background: #DFDFDF;
   border-radius: 5px;
 }
 #newRepo input::-webkit-input-placeholder,
 #newRepo textarea::-webkit-input-placeholder {
-  color: #b3b3b3;
+  color: #919191;
 }
 #newRepo textarea {
   height: 250px;
@@ -589,7 +626,7 @@ body {
   width: 42%;
   padding: 12px;
   background: #d7d7d7;
-  color: #b3b3b3;
+  color: #DFDFDF;
   margin-right: 3%;
   border-radius: 5px;
   font-size: 12px;
@@ -608,7 +645,7 @@ body {
   text-align: center;
   border-radius: 2px;
   color: #fff;
-  background: #d7d7d7;
+  background: #3DA1E5;
 }
 #newRepo .btn-create:hover {
   background: lightblue;
@@ -657,7 +694,7 @@ body {
 }
 #info .command {
   background: #eaeaea;
-  color: #b3b3b3;
+  color: #DFDFDF;
   padding: 5px 10px;
 }
 #info h4 {
@@ -685,7 +722,7 @@ body {
 }
 #orgList,
 #repoList {
-  margin-top: 40px;
+  padding-top: 40px;
 }
 #orgList .title,
 #repoList .title {
@@ -693,10 +730,11 @@ body {
 }
 #orgList .title button,
 #repoList .title button {
-  background: lightblue;
+  background: #3DA1E5;
   color: #fff;
   padding: 10px 20px;
   border-radius: 3px;
+  font-size: 2rem;
 }
 #orgList .title button:hover,
 #orgList .title button:focus,
@@ -708,11 +746,15 @@ body {
   background: lightblue;
 }
 #orgList .media-org {
-  background: #fff;
+  background: #F3F3F3;
   margin-top: 40px;
   width: 100%;
   padding: 10px 0;
   height: 200px;
+  border-left: 5px solid transparent;
+}
+#orgList .media-org:hover {
+  border-left: 5px solid #3DA1E5;
 }
 #orgList .org-left,
 #orgList .org-body {
@@ -722,7 +764,7 @@ body {
   width: 35%;
   height: 100%;
   padding: 50px 10px;
-  border-right: 1px solid #eaeaea;
+  border-right: 2px solid #E4E4E4;
   text-align: center;
   overflow: hidden;
 }
@@ -730,13 +772,14 @@ body {
   width: calc(65% - 16px);
   width: -webkit-calc(65% - 16px);
   text-align: center;
-  color: lightblue;
+  color: #1F4B9C;
 }
 #orgList .org-body span {
-  font-size: 30px;
+  font-size: 2.4rem;
 }
 #orgList .org-body small {
-  color: #b3b3b3;
+  color: #666;
+  font-size: 1.6rem;
 }
 #orgList img {
   width: 60px;
@@ -752,10 +795,16 @@ body {
   max-height: 50px;
   overflow: hidden;
   margin-top: 5px;
-  font-size: 16px;
+  font-size: 2rem;
+  color: #0E5585;
 }
 /* org list end */
 /* org create start */
+#newOrgContent {
+  width: 100%;
+  height: 100%;
+  background: #EEEEEE;
+}
 #createOrg {
   padding-top: 60px;
   height: 100%;
@@ -763,6 +812,7 @@ body {
 }
 #createOrg .guide {
   font-size: 16px;
+  color: #545454;
 }
 #createOrg .steps {
   margin: 0 auto;
@@ -782,7 +832,7 @@ body {
 }
 #createOrg li {
   width: 33.3%;
-  border-bottom: 1px solid #b3b3b3;
+  border-bottom: 1px solid #919191;
   float: left;
 }
 #createOrg li span {
@@ -794,7 +844,7 @@ body {
   font-size: 16px;
   text-align: center;
   color: #fff;
-  background: #b3b3b3;
+  background: #919191;
   position: relative;
   top: 20px;
 }
@@ -815,16 +865,26 @@ body {
   line-height: 40px;
   margin: 12px 0;
   padding: 0 12px;
-  font-size: 14px;
+  font-size: 1.6rem;
   border-radius: 5px;
-  background: #d7d7d7;
+  background: #DFDFDF;
 }
 #createOrg .first-step .save,
 #createOrg .second-step .save,
 #userSet .new-pwd .save {
   color: #fff;
-  background: #b3b3b3;
-  font-size: 16px;
+  background: #919191;
+  font-size: 2rem;
+}
+#createOrg .first-step .create,
+#createOrg .second-step .create,
+#userSet .new-pwd .save .create,
+#userSet .new-pwd .submit {
+  background: #3DA1E5;
+  font-size: 2rem;
+}
+#createOrg .first-step input::-webkit-input-placeholder {
+  color: #8B8B8B;
 }
 #createOrg .team-list {
   overflow: hidden;
@@ -846,6 +906,7 @@ body {
 #createOrg .members .title {
   height: 40px;
   padding: 0 12px;
+  color: #5D798C;
 }
 #createOrg .teams .title {
   line-height: 40px;
@@ -855,17 +916,18 @@ body {
   width: 100%;
   padding: 10px 20px 10px 12px;
   position: relative;
+  color: #15527B;
 }
 #createOrg .members li {
   padding: 10px 20px 10px 20px;
 }
-#createOrg .teams li:last-child,
-#createOrg .members li:last-child {
+#createOrg .teams li,
+#createOrg .members li {
   border: none;
 }
 #createOrg .teams li:hover,
 #createOrg .members li:hover {
-  background: #b3b3b3;
+  background: #687C8A;
   color: #fff;
 }
 #createOrg .teams li i,
@@ -889,7 +951,7 @@ body {
   float: left;
   padding: 9px 0 8px;
   text-align: center;
-  background: #ff5400;
+  background: #F77462;
   border-radius: 0 5px 5px 0;
   color: #fff;
   font-size: 16px;
@@ -897,14 +959,25 @@ body {
 #createOrg .to-repo {
   padding: 6px 12px;
   border-radius: 5px;
-  background: lightblue;
+  background: #3DA1E5;
   color: #fff;
   cursor: pointer;
 }
 /* org create end */
 /* user setting */
+#userEdit {
+  width: 100%;
+  height: 100%;
+  background: #DEDEDE;
+}
 #userSet {
-  margin-top: 40px;
+  padding-top: 40px;
+}
+#userSet h4 {
+  font-size: 2rem;
+}
+#userSet .new-pwd input {
+  background: #F7F7F7;
 }
 #userSet .content,
 #userSet .title {
@@ -915,6 +988,9 @@ body {
   line-height: 44px;
   margin-bottom: 20px;
   font-size: 16px;
+}
+#userSet .user-edit {
+  background: #CCCCCC;
 }
 #userSet .user-nav {
   text-align: center;
@@ -932,12 +1008,12 @@ body {
   display: block;
   border: none;
   background: none;
-  font-size: 16px;
+  font-size: 1.6rem;
 }
 #userSet .user-nav > li.active,
 .user-nav > li.active:focus,
 .user-nav > li.active:hover {
-  background: #555;
+  background: #2C374B;
 }
 #userSet .user-nav > li.active > a,
 .user-nav > li.active > a:focus,
@@ -967,27 +1043,27 @@ body {
   width: 72%;
   padding: 6px 12px;
   font-size: 16px;
-  background: #eaeaea;
+  background: #F7F7F7;
   border-radius: 5px;
   margin-right: 3%;
+  margin-bottom: 12px;
 }
 #userSet .add-email {
   padding: 30px 0;
-  background: #d7d7d7;
+  background: #D3D3D3;
 }
 #userSet .emails {
   margin-top: 15px;
-  border: 1px solid #d7d7d7;
   border-radius: 3px;
 }
 #userSet .emails li {
   width: 100%;
   padding: 8px 12px;
   font-size: 0;
-  background: #fff;
+  background: #F2F2F2;
 }
 #userSet .emails li:nth-child(2n) {
-  background: #eaeaea;
+  background: #DEDEDE;
 }
 #userSet .emails .addr,
 #userSet .emails .verified,
@@ -997,7 +1073,7 @@ body {
   font-size: 16px;
 }
 #userSet .emails .verified {
-  color: lightblue;
+  color: #2C58A7;
   cursor: pointer;
 }
 #userSet .emails li:first-child .verified {
@@ -1013,13 +1089,14 @@ body {
 #userSet .emails .delet {
   width: 6%;
   cursor: pointer;
+  color: #F77462;
 }
 #userSet .password {
   margin: 40px 0;
   padding: 40px 0 20px;
   background: #eaeaea;
   text-align: center;
-  font-size: 14px;
+  font-size: 1.6rem;
 }
 #userSet .password li {
   margin-bottom: 10px;
@@ -1045,19 +1122,19 @@ body {
   border-radius: 3px;
 }
 #userInfo .add {
-  background: #ff5400;
+  background: #F77462;
   width: 25%;
   padding: 5px 0;
   color: #fff;
-  font-size: 16px;
+  font-size: 1.6rem;
   border-radius: 5px;
 }
 #userSet .new-pwd {
-  background: #eaeaea;
+  background: #DEDEDE;
   padding: 30px 0;
 }
 #userSet .account {
-  background: #d7d7d7;
+  background: #D3D3D3;
 }
 /* user end */
 /* sign in & sign up start */
@@ -1077,13 +1154,13 @@ body {
   display: block;
   position: relative;
   bottom: 80px;
-  font-size: 24px;
+  font-size: 4.4rem;
   word-spacing: 12px;
   color: #fff;
 }
 #access .footer {
   width: 100%;
-  background: #000;
+  background: #242424;
   position: fixed;
   bottom: 0;
 }
@@ -1095,7 +1172,7 @@ body {
   text-align: center;
 }
 #access .footer .intro {
-  color: #b3b3b3;
+  color: #DFDFDF;
 }
 #access .footer .team {
   color: #fff;
@@ -1139,27 +1216,29 @@ body {
 #access .sign-up .space {
   display: block;
   width: 100%;
+  height: 44px;
   margin-bottom: 20px;
   border-radius: 5px;
-  padding: 10px 0;
-  font-size: 14px;
+  font-size: 1.6rem;
   position: relative;
 }
 #access .login input,
 #access .sign-up input {
   width: 100%;
+  height: 100%;
   padding: 0 32px 0 12px;
-  background: #eaeaea;
+  border-radius: 5px;
+  background: #DFDFDF;
   color: #b3b3b3;
-  font-size: 14px;
+  font-size: 1.6rem;
 }
 #access .login .space > i,
 #access .sign-up .space > i {
   position: absolute;
   right: 9px;
   top: 12px;
-  color: #b3b3b3;
-  font-size: 14px;
+  color: #8B8B8B;
+  font-size: 1.6rem;
 }
 #access .login .user,
 #access .login .pwd,
@@ -1169,39 +1248,43 @@ body {
 #access .sign-up .pwd,
 #access .sign-up .user input:focus,
 #access .sign-up .pwd input:focus {
-  background: #eaeaea;
+  background: #DFDFDF;
 }
 #access .ng-untouched,
 #access .ng-valid,
 #access .ng-dirty {
-  background: #eaeaea;
+  background: #DFDFDF;
 }
 #access .login .sign-in,
 #access .sign-up .sign-in {
-  background: lightblue;
+  background: #2C58A7;
   color: #fff;
+  font-size: 2rem;
 }
 #access .login .google {
-  background: #ff5400;
+  background: #F77462;
   color: #fff;
   width: 48%;
   text-align: center;
   border-radius: 5px 0 0 5px;
   padding: 5px 0;
+  font-size: 1.6rem;
 }
 #access .login .github {
-  background: lightblue;
+  background: #56ABE4;
   color: #fff;
   width: 48%;
   text-align: center;
   border-radius: 0 5px 5px 0;
   padding: 5px 0;
+  font-size: 1.6rem;
 }
 #access .login .forget-pwd {
   display: block;
   text-align: center;
-  color: #b3b3b3;
+  color: #8B8B8B;
   margin-bottom: 15px;
+  font-size: 1.6rem;
 }
 #access .navbar {
   width: 100%;
@@ -1231,7 +1314,7 @@ body {
   width: 15%;
   background: #fff;
   opacity: 0.75;
-  font-size: 16px;
+  font-size: 1.6rem;
   float: left;
   text-align: center;
 }
@@ -1283,17 +1366,17 @@ body {
   margin-bottom: 20px;
   overflow: hidden;
   width: 100%;
-  font-size: 14px;
+  font-size: 1.6rem;
   border-left: 5px solid transparent;
 }
 #access .browse .info li {
   float: left;
-  background: #eaeaea;
+  background: #F3F3F3;
   padding: 24px 0;
   text-align: center;
 }
 #access .browse .space:hover {
-  border-left: 5px solid lightblue;
+  border-left: 5px solid #3DA1E5;
 }
 #access .browse .info .name,
 #access .browse .info .star {
@@ -1307,15 +1390,16 @@ body {
 #access .browse .info .download {
   width: 20%;
   padding: 33px 0;
+  color: #999999;
 }
 #access .browse .info .detail {
   width: 17%;
   padding: 33px 0;
-  background: #b3b3b3;
+  background: #999999;
   color: #fff;
 }
 #access .browse .info .active {
-  background: lightblue;
+  background: #3DA1E5;
 }
 #access .browse .name img {
   width: 60px;
@@ -1324,6 +1408,9 @@ body {
 }
 #access .browse .name .text {
   display: block;
+}
+#access .browse .name .text:first-child {
+  color: #0e5585;
 }
 /* sign in & sign up end */
 /*# sourceMappingURL=app.css.map */
