--- a/less/app.less
+++ b/less/app.less
@@ -33,11 +33,11 @@ input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
 }
 
 .col-orange {
-	color: @orange;
+	color: @starOrange;
 }
 
 .col-gray {
-	color: @gray;
+	color: @repoFontGray;
 }
 
 .col-skyblue {
@@ -45,7 +45,7 @@ input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
 }
 
 .bg-darkgray {
-	background: #b3b3b3;
+	background: @userNavGray;
 }
 
 .bg-brownness {
@@ -127,19 +127,25 @@ input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
 }
 
 html {
-	font-size: 62.5%;
+	font-size: 10px;
 }
 
 body {
-	font-size: @baseFontSize;
-	background: #F0EFF5;
+	font-size: @baseSize;
+	background: @bodyGray;
+	color: @black;
 	// font-family: Microsoft YaHei;
 }
 
+#repoContent {
+	background: @outLetGray;
+	width: 100%;
+	height: 100%;
+}
 /* index start */
 #header {
 	overflow: hidden;
-	font-size: 14px;
+	font-size: @baseSize;
 	padding: 15px 12px;
 	background: lightblue;
 }
@@ -204,7 +210,7 @@ body {
 
 .content-two .space {
 	display: inline-block;
-	font-size: 14px;
+	font-size: @baseSize;
 	vertical-align: bottom;
 	width: 80%;
 	margin-left: 10%;
@@ -251,7 +257,7 @@ body {
 	border-radius: 24px;
 	background: #d7d7d7;
 	margin-left: 10px;
-	font-size: 14px;
+	font-size: @baseSize;
 }
 /* index end */
 
@@ -259,8 +265,7 @@ body {
 #nav {
 	width: 100%;
 	height: 44px;
-	// margin-bottom: @baseMargin;
-	background: @black;
+	background: @menuBlack;
 }
 
 #nav .menu, #nav .user {
@@ -269,10 +274,11 @@ body {
 }
 
 #nav .menu a, #nav .user a {
-	font-size: 14px;
+	font-size: @baseSize;
 }
-
-#nav a:hover, #nav a:active, #createRepo a:hover, #createRepo:active{
+ 
+#createRepo a:hover, 
+#createRepo a:active{
 	color: @white;
 	background: @blue;
 	border-radius: @baseRadius;
@@ -293,9 +299,8 @@ body {
 
 #nav .menu li a, #nav .user > li > a {
 	padding: 0 12px;
-	height: 28px;
-	line-height: 28px;
-	margin-top: 9px;
+	height: 44px;
+	line-height: 44px;
 	margin-right: @baseMargin+2px;
 	color: @white;
 }
@@ -329,9 +334,8 @@ body {
 }
 
 #nav .menu li .active {
-	color: @white;
-	background: @blue;
-	border-radius: @baseRadius; 
+	color: @baseBlue;
+	border-bottom: 3px solid @baseBlue;
 }
 
 #nav .user > li input {
@@ -341,7 +345,11 @@ body {
 	padding: 0 5px;
 	border-radius: @baseRadius;
 	background: #e7e7e7;
-	font-size: 14px;
+	font-size: @baseSize;
+}
+
+#nav .user li .active {
+	color: @baseBlue;
 }
 
 #nav .user > li input:focus {
@@ -354,15 +362,32 @@ body {
 
 #createRepo, #userSetting {
 	width: 200px;
-	background: #eaeaea;
+	background: @menuGray;
 	position: absolute;
-	top: 42px;
-	left: 0px;
+	top: 44px;
+	right: 0px;
 	z-index: 10000;
+	display: none;
+}
+
+#createRepo li a:hover, 
+#userSetting li a:hover {
+	background: @baseBlue;
+	color: @white;
+}
+
+#nav .user .show {
+	display: block;
+}
+
+@media screen and (max-width: 1100px) {
+	#nav .user .filter {
+		width: 170px;	
+	}
 }
 
 @media screen and (max-width: 840px) {
-	#nav .user li:first-child {
+	#nav .user .filter {
 		display: none;
 	}
 
@@ -406,10 +431,6 @@ body {
 }
 
 @media screen and (max-width: 425px) {
-	// #nav .user > li > a {
-	// 	margin-right: 0;
-	// }
-	
 	#nav .menu {
 		width: 70%;
 	}
@@ -429,10 +450,12 @@ body {
 
 #userSetting {
 	width: 120px;
-	left: 12px;
 }
 
-#createRepo li, #createRepo li a, #userSetting li, #userSetting li a {
+#createRepo li, 
+#createRepo li a, 
+#userSetting li, 
+#userSetting li a {
 	width: 100%;
 }
 
@@ -445,7 +468,7 @@ body {
 	width: 100%;
 	height: 44px;
 	line-height: 44px;
-	font-size: 14px;
+	font-size: @baseSize;
 }
 #nav i {
 	margin: 0 5px 0 10px;
@@ -473,7 +496,7 @@ body {
 	border: 1px solid #eaeaea;
 	border-radius: 24px 24px 24px 24px;
 	padding: 0 12px;
-	font-size: 14px;
+	font-size: @baseSize;
 }
 
 #repoList .filter-repo .search {
@@ -496,9 +519,8 @@ body {
 
 #repoList .repo-left {
 	height: 405px;
-	background: #eaeaea;
+	background: @browseWhite;
 	padding: 0;
-	border-radius: 3px;
 }
 
 #repoList .repo-left span {
@@ -506,21 +528,22 @@ body {
 	width: 100%;
 	padding: 12px 20px;
 	text-overflow: ellipsis;
-	color: #fff;
+	font-size: @baseSize;
+	color: @black;
 }
 
 #repoList .repo-left span:first-child {
-	font-size: 16px;
-	border-radius: 3px 3px 0 0;
+	font-size: @smallSize;
 	cursor: pointer;
+	color: @white;
 }
 
 #repoList .repo-left .bg-orange {
-	background: #ff5400;
+	background: @repoOrange;
 }
 
 #repoList .repo-left .bg-blue {
-	background: @blue;
+	background: @baseBlue;
 }
 
 #repoList .repo-body {
@@ -533,14 +556,14 @@ body {
 	width: e("-webkit-calc( (100% - 5px) /2)");
 	padding: 12px;
 	margin-bottom: 5px;
-	background: #eaeaea;
+	background: @browseWhite;
 	vertical-align: top;
-	border-radius: 3px;
 	height: 200px;
+	border-bottom: 5px solid transparent;
 }
 
 #repoList .repo-body a:hover {
-	border: 1px solid #ff5400;
+	border-bottom: 5px solid @baseBlue;
 }
 
 #repoList .repo-body a:nth-child(2n) {
@@ -549,13 +572,29 @@ body {
 
 #repoList .repo-body h3{
 	margin-top: 8px;
-	font-size: 20px;
+	font-size: @smallSize;
+	color: @black;
 }
 
 #repoList .repo-body h5 {
 	font-size: 16px;
-	height: 40px;
+	height: 36px;
 	overflow: hidden;
+	color: @repoFontGray;
+}
+
+@media screen and (max-width: 640px) {
+	#repoList .repo-body a {
+		width: 100%;
+	}
+
+	#repoList .repo-body a:nth-child(2n) {
+		margin-left: 0;
+	}
+
+	#repoList .repo-left {
+		height: 815px;
+	}
 }
 
 #repoList .star-fork {
@@ -579,8 +618,13 @@ body {
 /* repo list end */
 
 /* repo create start */
+#newRepoContent {
+	width: 100%;
+	height: 100%;
+	background: @repoNewGray;
+}
 #newRepo {
-	margin-top: @baseMargin+50px;
+	padding-top: @baseMargin+50px;
 }
 
 #newRepo .guide {
@@ -591,7 +635,7 @@ body {
 	height: auto;
 	width: 100%;
 	padding-bottom: 50px;
-	border-left: 1px dashed #b3b3b3;
+	border-left: 2px dashed @repoStepGray;
 }
 
 
@@ -606,8 +650,8 @@ body {
 	line-height: 40px;
 	text-align: center;
 	border-radius: 5px;
-	font-size: 16px;
-	background: gainsboro;
+	font-size: @baseSize;
+	background: @repoStepGray;
 	color: @white;
 	vertical-align: top;
 	position: relative;
@@ -615,7 +659,7 @@ body {
 }
 
 .step-brown {
-	background: @blue !important;
+	background: @orgStepBlue !important;
 }
 
 #newRepo li:last-child span {
@@ -623,12 +667,13 @@ body {
 }
 
 #newRepo li b {
-	font-size: 16px;
+	font-size: @baseSize;
 	margin-top: 10px;
 	font-weight: normal;
 	display: inline-block;
 	width: e("calc(100% - 52px)");
 	width: e("-webkit-calc(100% - 52px)");
+	color: @repoStepFontGray;
 }
 
 #newRepo .info {
@@ -638,13 +683,14 @@ body {
 #newRepo input, #newRepo textarea {
 	width: 100%;
 	padding: 10px;
-	font-size: 16px;
-	background: #d7d7d7;
+	font-size: @baseSize;
+	background: @repoFormGray;
 	border-radius: 5px;
 }
 
-#newRepo input::-webkit-input-placeholder, #newRepo textarea::-webkit-input-placeholder {
-	color: #b3b3b3;
+#newRepo input::-webkit-input-placeholder, 
+#newRepo textarea::-webkit-input-placeholder {
+	color: @placeHolderGray;
 }
 
 #newRepo textarea {
@@ -715,7 +761,7 @@ body {
 	text-align: center;
 	border-radius: @baseRadius;
 	color: @white;
-	background: #d7d7d7;
+	background: @baseBlue;
 }
 
 #newRepo .btn-create:hover {
@@ -816,7 +862,7 @@ body {
 }
 
 #orgList, #repoList {
-	margin-top: @baseMargin+30px;
+	padding-top: @baseMargin+30px;
 }
 
 #orgList .title, #repoList .title {
@@ -825,10 +871,11 @@ body {
 
 #orgList .title button,
 #repoList .title button {
-	background: @blue;
+	background: @baseBlue;
 	color: @white;
 	padding: 10px 20px;
 	border-radius: 3px;
+	font-size: @smallSize;
 }
 
 #orgList .title button:hover, 
@@ -842,11 +889,16 @@ body {
 }
 
 #orgList .media-org {
-	background: @white;
+	background: @browseWhite;
 	margin-top: @baseMargin+30px;
 	width: 100%;
 	padding: 10px 0;
 	height: 200px;
+	border-left: 5px solid transparent;
+}
+
+#orgList .media-org:hover {
+	border-left: 5px solid @browseBlue;
 }
 
 #orgList .org-left, #orgList .org-body {
@@ -857,7 +909,7 @@ body {
 	width: 35%;
 	height: 100%;
 	padding: 50px 10px;
-	border-right: 1px solid #eaeaea;
+	border-right: 2px solid @orgGapGray;
 	text-align: center;
 	overflow: hidden;
 }
@@ -866,15 +918,16 @@ body {
 	width: e("calc(65% - 16px)");
 	width: e("-webkit-calc(65% - 16px)");
 	text-align: center;
-	color: @blue;
+	color: @orgNumBlue;
 }
 
 #orgList .org-body span{
-	font-size: 30px;
+	font-size: @middleSize;
 }
 
 #orgList .org-body small {
-	color: @gray;
+	color: @orgFontGray;
+	font-size: @baseSize;
 }
 
 #orgList img {
@@ -892,13 +945,18 @@ body {
 	max-height: 50px;
 	overflow: hidden;
 	margin-top: 5px;
-	font-size: 16px;
+	font-size: @smallSize;
+	color: @orgNameBlue;
 }
 
 /* org list end */
 
 /* org create start */
-
+#newOrgContent {
+	width: 100%;
+	height: 100%;
+	background: @orgNewGray;
+}
 #createOrg {
 	padding-top: 60px;
 	height: 100%;
@@ -907,6 +965,7 @@ body {
 
 #createOrg .guide {
 	font-size: 16px;
+	color: @orgStepFontGray;
 }
 
 #createOrg .steps {
@@ -929,7 +988,7 @@ body {
 
 #createOrg li {
 	width: 33.3%;
-	border-bottom: 1px solid @gray;
+	border-bottom: 1px solid @orgStepGray;
 	float: left;
 }
 
@@ -942,7 +1001,7 @@ body {
 	font-size: 16px;
 	text-align: center;
 	color: @white;
-	background: @gray;
+	background: @orgStepGray;
 	position: relative;
 	top: 20px;
 }
@@ -966,17 +1025,29 @@ body {
 	line-height: 40px;
 	margin: 12px 0;
 	padding: 0 12px;
-	font-size: 14px;
+	font-size: @baseSize;
 	border-radius: 5px;
-	background: #d7d7d7;
+	background: @orgFormGray;
 }
 
 #createOrg .first-step .save,
 #createOrg .second-step .save,
 #userSet .new-pwd .save {
 	color: #fff;
-	background: #b3b3b3;
-	font-size: 16px;
+	background: @orgStepGray;
+	font-size: @smallSize;
+}
+
+#createOrg .first-step .create, 
+#createOrg .second-step .create,
+#userSet .new-pwd .save .create,
+#userSet .new-pwd .submit {
+	background: @baseBlue;
+	font-size: @smallSize;
+}
+
+#createOrg .first-step input::-webkit-input-placeholder {
+	color: @iconGray;
 }
 
 #createOrg .team-list {
@@ -1001,6 +1072,7 @@ body {
 #createOrg .members .title {
 	height: 40px;
 	padding: 0 12px;
+	color: @teamTitleBlue;
 }
 
 #createOrg .teams .title {
@@ -1012,20 +1084,21 @@ body {
 	width: 100%;
 	padding: 10px 20px 10px 12px;
 	position: relative;
+	color: @teamFontBlue;
 }
 
 #createOrg .members li {
 	padding: 10px 20px 10px 20px;
 }
 
-#createOrg .teams li:last-child,
-#createOrg .members li:last-child {
+#createOrg .teams li,
+#createOrg .members li {
 	border: none;
 }
 
 #createOrg .teams li:hover,
 #createOrg .members li:hover {
-	background: #b3b3b3;
+	background: @teamGray;
 	color: #fff;
 }
 
@@ -1053,7 +1126,7 @@ body {
 	float: left;
 	padding: 9px 0 8px;
 	text-align: center;
-	background: #ff5400;
+	background: @repoOrange;
 	border-radius: 0 5px 5px 0;
 	color: #fff;
 	font-size: 16px;
@@ -1062,7 +1135,7 @@ body {
 #createOrg .to-repo {
 	padding: 6px 12px;
 	border-radius: 5px;
-	background: lightblue;
+	background: @baseBlue;
 	color: #fff;
 	cursor: pointer;
 }
@@ -1070,8 +1143,22 @@ body {
 /* org create end */
 
 /* user setting */
+#userEdit {
+	width: 100%;
+	height: 100%;
+	background: @outLetGray;
+}
+
 #userSet {
-	margin-top: 40px;
+	padding-top: 40px;
+}
+
+#userSet h4 {
+	font-size: @smallSize;
+}
+
+#userSet .new-pwd input {
+	background: @userFormWhite;
 }
 
 #userSet .content, #userSet .title {
@@ -1083,6 +1170,10 @@ body {
 	line-height: 44px;
 	margin-bottom: 20px;
 	font-size: 16px;
+}
+
+#userSet .user-edit {
+	background: @userNavGray;
 }
 
 #userSet .user-nav {
@@ -1103,13 +1194,13 @@ body {
 	display: block;
 	border: none;
 	background: none;
-	font-size: 16px;
+	font-size: @baseSize;
 }
 
 #userSet .user-nav>li.active, 
 .user-nav>li.active:focus, 
 .user-nav>li.active:hover {
-	background: #555;
+	background: @userNavBlue;
 }
 
 #userSet .user-nav>li.active>a,
@@ -1145,19 +1236,19 @@ body {
 	width: 72%;
 	padding: 6px 12px;
 	font-size: 16px;
-	background: #eaeaea;
+	background: @userFormWhite;
 	border-radius: 5px;
 	margin-right: 3%;
+	margin-bottom: 12px;
 }
 
 #userSet .add-email {
 	padding: 30px 0;
-	background: #d7d7d7;
+	background: @userEmailGray;
 }
 
 #userSet .emails {
 	margin-top: 15px;
-	border: 1px solid #d7d7d7;
 	border-radius: 3px;
 }
 
@@ -1165,11 +1256,11 @@ body {
 	width: 100%;
 	padding: 8px 12px;
 	font-size: 0;
-	background: #fff;
+	background: @userEmailWhite;
 }
 
 #userSet .emails li:nth-child(2n) {
-	background: #eaeaea;
+	background: @outLetGray;
 }
 
 #userSet .emails .addr,
@@ -1181,13 +1272,12 @@ body {
 }
 
 #userSet .emails .verified {
-	color: @blue;
+	color: @loginBlue;
 	cursor: pointer;
 }
 
 #userSet .emails li:first-child .verified {
 	color: #000;
-	// cursor: default;
 }
 
 #userSet .emails .addr {
@@ -1201,6 +1291,7 @@ body {
 #userSet .emails .delet {
 	width: 6%;
 	cursor: pointer;
+	color: @orange;
 }
 
 #userSet .password {
@@ -1208,7 +1299,7 @@ body {
 	padding: 40px 0 20px;
 	background: #eaeaea;
 	text-align: center;
-	font-size: 14px;
+	font-size: @baseSize;
 }
 
 #userSet .password li {
@@ -1239,21 +1330,21 @@ body {
 }
 
 #userInfo .add {
-	background: #ff5400;
+	background: @orange;
 	width: 25%;
 	padding: 5px 0;
 	color: #fff;
-	font-size: 16px;
+	font-size: @baseSize;
 	border-radius: 5px;
 }
 
 #userSet .new-pwd {
-	background: #eaeaea;
+	background: @outLetGray;
 	padding: 30px 0;
 }
 
 #userSet .account {
-	background: #d7d7d7;
+	background: @userEmailGray;
 }
 /* user end */
 
@@ -1277,14 +1368,14 @@ body {
 	display: block;
 	position: relative;
 	bottom: 80px;
-	font-size: 24px;
+	font-size: @bigPlusSize;
 	word-spacing: 12px;
 	color: @white;
 }
 
 #access .footer {
 	width: 100%;
-	background: #000;
+	background: @footerGray;
 	position: fixed;
 	bottom: 0;
 }
@@ -1348,65 +1439,71 @@ body {
 #access .login .space, #access .sign-up .space {
 	display: block;
 	width: 100%;
+	height: 44px;
 	margin-bottom: 20px;
 	border-radius: 5px;
-	padding: 10px 0;	
-	font-size: 14px;
+	font-size: @baseSize;
 	position: relative;
 }
 
 #access .login input, #access .sign-up input {
 	width: 100%;
+	height: 100%;
 	padding: 0 32px 0 12px;
-	background: #eaeaea;
+	border-radius: 5px;
+	background: @gray;
 	color: #b3b3b3;
-	font-size: 14px;
+	font-size: @baseSize;
 }
 
 #access .login .space > i, #access .sign-up .space > i {
 	position: absolute;
 	right: 9px;
 	top: 12px;
-	color: #b3b3b3;
-	font-size: 14px;
+	color: @iconGray;
+	font-size: @baseSize;
 }
 #access .login .user, #access .login .pwd, #access .login .user input:focus, #access .login .pwd input:focus,
 #access .sign-up .user, #access .sign-up .pwd, #access .sign-up .user input:focus, #access .sign-up .pwd input:focus {
-	background: #eaeaea; 
+	background: @gray; 
 }
 
 #access .ng-untouched, #access .ng-valid, #access .ng-dirty {
-	background: #eaeaea;
+	background: @gray;
 }
 
 #access .login .sign-in, #access .sign-up .sign-in {
-	background: lightblue;
+	background: @loginBlue;
 	color: #fff;
+	font-size: @smallSize;
 }
 
 #access .login .google {
-	background: #ff5400;
+	background: @orange;
 	color: #fff;
 	width: 48%;
 	text-align: center;
 	border-radius: 5px 0 0 5px;
 	padding: 5px 0;
+	font-size: @baseSize;
 }
 
 #access .login .github {
-	background: lightblue;
+	background: @signBlue;
 	color: #fff;
 	width: 48%;
 	text-align: center;
 	border-radius: 0 5px 5px 0;
 	padding: 5px 0;
+	font-size: @baseSize;
 }
 
 #access .login .forget-pwd {
 	display: block;
 	text-align: center;
-	color: #b3b3b3;
+	color: @iconGray;
 	margin-bottom: 15px;
+	font-size: @baseSize;
 }
 
 #access .navbar {
@@ -1422,7 +1519,7 @@ body {
 	width: 50%;
 	float: left;
 	text-align: center;
-	background: #fff;
+	background: @headerWhite;
 	opacity: 0.75;
 }
 
@@ -1439,9 +1536,9 @@ body {
 
 #access .menu .space {
 	width: 15%;
-	background: #fff;
+	background: @headerWhite;
 	opacity: 0.75;
-	font-size: 16px;
+	font-size: @baseSize;
 	float: left;
 	text-align: center;
 }
@@ -1459,7 +1556,7 @@ body {
 #access .menu .space-remain {
 	width: 25%;
 	float: left;
-	background: #fff;
+	background: @headerWhite;
 	opacity: 0.75;
 	color: #fff;
 }
@@ -1498,19 +1595,19 @@ body {
 	margin-bottom: 20px;
 	overflow: hidden;
 	width: 100%;
-	font-size: 14px;
+	font-size: @baseSize;
 	border-left: 5px solid transparent;
 }
 
 #access .browse .info li {
 	float: left;
-	background: #eaeaea;
+	background: @browseWhite;
 	padding: 24px 0;
 	text-align: center;
 }
 
 #access .browse .space:hover {
-	border-left: 5px solid @blue;
+	border-left: 5px solid @browseBlue;
 }
 
 #access .browse .info .name,
@@ -1527,17 +1624,18 @@ body {
 #access .browse .info .download {
 	width: 20%;
 	padding: 33px 0;
+	color: @browseIconGray;
 }
 
 #access .browse .info .detail {
 	width: 17%;
 	padding: 33px 0;
-	background: #b3b3b3;
+	background: @browseIconGray;
 	color: #fff;
 }
 
 #access .browse .info .active {
-	background: @blue;
+	background: @browseBlue;
 }
 
 #access .browse .name img {
@@ -1548,5 +1646,9 @@ body {
 
 #access .browse .name .text {
 	display: block;
+}
+
+#access .browse .name .text:first-child {
+	color: @browseFontBlue;
 }
 /* sign in & sign up end */
