--- a/templates/repository/repoCreate.html
+++ b/templates/repository/repoCreate.html
@@ -1,52 +1,54 @@
-<div class="row" id="newRepo">
-  <div class="col-xs-12 col-md-10 col-md-offset-1">
-    <div class="row">
-      <ul class="col-xs-6">
-        <li>
-          <span [ngClass]=" step=== 1? 'step-brown' : '' ">1</span>
-          <b>Choose a namespace (Required) </b>
-        </li>
-        <li>
-          <span [ngClass]=" step=== 2? 'step-brown' : '' ">2</span>
-          <b>Add a repository name (Required) </b>
-        </li>
-        <li>
-          <span [ngClass]=" step=== 3? 'step-brown' : '' ">3</span>
-          <b>Add a short description </b>
-        </li>
-        <li>
-          <span [ngClass]=" step=== 4? 'step-brown' : '' ">4</span>
-          <b>Add markdown to the full description field </b>
-        </li>
-        <li>
-          <span [ngClass]=" step=== 5? 'step-brown' : '' ">5</span>
-          <b>Set it to be a private or public repository </b>
-        </li>
-      </ul>
-      <div class="col-xs-6 info">
-        <p class="mar-bt-twenty-five clear-gap">
-          <select [(ngModel)]="repo.username" name="username" (focus)="changeStep(1)">
-            <option value="1">dockyard</option>
-            <option value="2">surface</option>
-          </select>
-          <input type="text" placeholder="name"  (focus)="changeStep(2)" [(ngModel)]="repo.repository" name="repository"/>
-        </p>
-        <p class="mar-bt-twenty-five">
-          <input type="text" placeholder="short descript"  (focus)="changeStep(3)" [(ngModel)]="repo.short" name="short"/>
-        </p>
-        <textarea placeholder="full descript" (focus)="changeStep(4)" [(ngModel)]="repo.description" name="description"></textarea>
-        <div class="visible-type">
-          <span>visibility:</span>
-          <label>
-            <input type="radio" name="visibility" value="public" (focus)="changeStep(5)" [(ngModel)]="repo.privilege" name="privilege"/>public
-            <input type="radio" name="visibility" value="private" (focus)="changeStep(5)" [(ngModel)]="repo.privilege" name="privilege"/>private
-          </label>
-          <!-- <select>
-            <option value="0">public</option>
-            <option value="1">private</option>
-          </select> -->
+<div id="newRepoContent">
+  <div class="row" id="newRepo">
+    <div class="col-xs-12 col-md-10 col-md-offset-1">
+      <div class="row">
+        <ul class="col-xs-6">
+          <li>
+            <span [ngClass]=" step=== 1? 'step-brown' : '' ">1</span>
+            <b>Choose a namespace (Required) </b>
+          </li>
+          <li>
+            <span [ngClass]=" step=== 2? 'step-brown' : '' ">2</span>
+            <b>Add a repository name (Required) </b>
+          </li>
+          <li>
+            <span [ngClass]=" step=== 3? 'step-brown' : '' ">3</span>
+            <b>Add a short description </b>
+          </li>
+          <li>
+            <span [ngClass]=" step=== 4? 'step-brown' : '' ">4</span>
+            <b>Add markdown to the full description field </b>
+          </li>
+          <li>
+            <span [ngClass]=" step=== 5? 'step-brown' : '' ">5</span>
+            <b>Set it to be a private or public repository </b>
+          </li>
+        </ul>
+        <div class="col-xs-6 info">
+          <p class="mar-bt-twenty-five clear-gap">
+            <select [(ngModel)]="repo.username" name="username" (focus)="changeStep(1)">
+              <option value="1">dockyard</option>
+              <option value="2">surface</option>
+            </select>
+            <input type="text" placeholder="name"  (focus)="changeStep(2)" [(ngModel)]="repo.repository" name="repository"/>
+          </p>
+          <p class="mar-bt-twenty-five">
+            <input type="text" placeholder="short descript"  (focus)="changeStep(3)" [(ngModel)]="repo.short" name="short"/>
+          </p>
+          <textarea placeholder="full descript" (focus)="changeStep(4)" [(ngModel)]="repo.description" name="description"></textarea>
+          <div class="visible-type">
+            <span>visibility:</span>
+            <label>
+              <input type="radio" name="visibility" value="public" (focus)="changeStep(5)" [(ngModel)]="repo.privilege" name="privilege"/>public
+              <input type="radio" name="visibility" value="private" (focus)="changeStep(5)" [(ngModel)]="repo.privilege" name="privilege"/>private
+            </label>
+            <!-- <select>
+              <option value="0">public</option>
+              <option value="1">private</option>
+            </select> -->
+          </div>
+          <button class="btn-create" (click)="saveRepoInfo()">create</button>
         </div>
-        <button class="btn-create" (click)="saveRepoInfo()">create</button>
       </div>
     </div>
   </div>
