--- a/css/app.css
+++ b/css/app.css
@@ -90,6 +90,9 @@ select:-webkit-autofill {
 .pad-no {
   padding: 0;
 }
+.pad-rt-no {
+  padding-right: 0;
+}
 .over-hidden {
   overflow: hidden;
 }
@@ -341,7 +344,8 @@ body {
   }
 }
 @media screen and (max-width: 642px) {
-  #nav .user .create {
+  #nav .user .create,
+  #nav .user .add {
     display: none;
   }
 }
@@ -351,6 +355,9 @@ body {
   }
   #nav .menu {
     width: 60%;
+  }
+  #nav .menu .logo a {
+    margin-right: 15px;
   }
 }
 @media screen and (max-width: 600px) {
@@ -366,8 +373,12 @@ body {
   #nav .menu .logo a {
     margin-right: 15px;
   }
+  #nav .menu li a,
+  #nav .user > li > a {
+    padding: 0 6px;
+  }
 }
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 480px) {
   #nav .menu {
     width: 70%;
   }
@@ -407,29 +418,6 @@ body {
 }
 /* nav end */
 /* repo list start */
-#repoList .filter-repo {
-  text-align: center;
-  height: 40px;
-  line-height: 40px;
-  font-size: 20px;
-  margin-top: 65px;
-  margin-bottom: 80px;
-}
-#repoList .filter-repo input {
-  width: 500px;
-  margin-right: 10px;
-  border: 1px solid #eaeaea;
-  border-radius: 24px 24px 24px 24px;
-  padding: 0 12px;
-  font-size: 1.6rem;
-}
-#repoList .filter-repo .search {
-  position: absolute;
-  right: 30px;
-  top: -41px;
-  padding: 5px;
-  cursor: pointer;
-}
 #repoList .content {
   width: 100%;
   margin-left: 12px;
@@ -493,17 +481,6 @@ body {
   overflow: hidden;
   color: #474646;
 }
-@media screen and (max-width: 640px) {
-  #repoList .repo-body a {
-    width: 100%;
-  }
-  #repoList .repo-body a:nth-child(2n) {
-    margin-left: 0;
-  }
-  #repoList .repo-left {
-    height: 815px;
-  }
-}
 #repoList .star-fork {
   font-size: 20px;
   margin-top: 60px;
@@ -519,6 +496,100 @@ body {
   top: 8px;
   right: -4px;
   opacity: 0.5;
+}
+#allRepo {
+  padding-top: 40px;
+}
+#allRepo .repo-body {
+  width: 100%;
+  font-size: 0;
+  padding: 0;
+}
+#allRepo .repo-body a:nth-child(3n) {
+  margin-right: 0;
+}
+#allRepo .repo-body a {
+  display: inline-block;
+  width: calc((100% - 10px) / 3);
+  width: -webkit-calc((100% - 10px) / 3);
+  padding: 12px;
+  margin-bottom: 5px;
+  margin-right: 5px;
+  background: #F3F3F3;
+  height: 200px;
+  border-bottom: 5px solid transparent;
+}
+#allRepo .repo-body a:hover {
+  border-bottom: 5px solid #3DA1E5;
+}
+#allRepo .repo-body h3 {
+  margin-top: 8px;
+  font-size: 2rem;
+  color: #191919;
+}
+#allRepo .repo-body h5 {
+  font-size: 16px;
+  height: 36px;
+  overflow: hidden;
+  color: #474646;
+}
+#allRepo .star-fork {
+  font-size: 20px;
+  margin-top: 60px;
+  margin-bottom: 0;
+  position: relative;
+}
+#allRepo .star-fork i {
+  font-size: 24px;
+}
+#allRepo .org-name {
+  height: 40px;
+  line-height: 40px;
+  color: #1F4B9C;
+  font-size: 2rem;
+}
+#allRepo .star-fork i.fa-info-circle {
+  font-size: 18px;
+  position: absolute;
+  top: 8px;
+  right: -4px;
+  opacity: 0.5;
+}
+#allRepo .filter-repo {
+  text-align: center;
+  font-size: 20px;
+  margin-bottom: 40px;
+}
+#allRepo .filter-repo input {
+  width: 100%;
+  background: #F3F3F3;
+  padding: 8px 35px 8px 10px;
+  font-size: 1.6rem;
+  border-radius: 5px;
+}
+#allRepo .filter-repo .filter {
+  position: absolute;
+  right: 3px;
+  top: 4px;
+  padding: 5px;
+  cursor: pointer;
+}
+@media screen and (max-width: 640px) {
+  #repoList .repo-body a {
+    width: 100%;
+  }
+  #repoList .repo-body a:nth-child(2n) {
+    margin-left: 0;
+  }
+  #allRepo .repo-body a {
+    width: 100%;
+  }
+  #allRepo .repo-body a {
+    margin-right: 0;
+  }
+  #repoList .repo-left {
+    height: 815px;
+  }
 }
 /* repo list end */
 /* repo create start */
