--- a/templates/repository/repoList.html
+++ b/templates/repository/repoList.html
@@ -1,15 +1,5 @@
 <div id="repoContent">
   <div id="repoList">
-    <p class="filter-repo disp-no">
-      <span class="relative">
-        <input type="text" />
-        <i class="fa fa-search search"></i>
-      </span>
-      <span class="col-skyblue cursor-point">
-        <i class="fa fa-plus"></i>
-        Create Repository
-      </span>
-    </p>
     <div class="row">
       <div class="col-md-10 col-md-offset-1 col-xs-12 title">
         <p class="col-xs-12 col-md-4 pad-no">
@@ -43,6 +33,53 @@
       </div>
     </div>
   </div>
+  <!-- <div id="allRepo">
+    <div class="row">
+      <div class="col-xs-12 col-md-10 col-md-offset-1">
+        <div class="row pad-no">
+          <div class="col-xs-5 col-md-3 org-name">Org name</div>
+          <div class="col-xs-6 col-xs-offset-1 col-md-5 col-md-offset-4 pad-rt-no">
+            <p class="filter-repo">
+              <input type="text" placeHolder="search repository"/>
+              <i class="fa fa-search filter"></i>
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12 repo-body">
+            <a href="javascript:void(0)">
+              <h3>small/gsgsg</h3>
+              <h5 class="col-gray">this is desc</h5>
+              <p class="star-fork">
+                <i class="fa fa-star col-orange"></i> 200 
+              </p>
+            </a>
+            <a href="javascript:void(0)">
+              <h3>small/gsgsg</h3>
+              <h5 class="col-gray">this is desc</h5>
+              <p class="star-fork">
+                <i class="fa fa-star col-orange"></i> 200 
+              </p>
+            </a>
+            <a href="javascript:void(0)">
+              <h3>small/gsgsg</h3>
+              <h5 class="col-gray">this is desc</h5>
+              <p class="star-fork">
+                <i class="fa fa-star col-orange"></i> 200 
+              </p>
+            </a>
+            <a href="javascript:void(0)">
+              <h3>small/gsgsg</h3>
+              <h5 class="col-gray">this is desc</h5>
+              <p class="star-fork">
+                <i class="fa fa-star col-orange"></i> 200 
+              </p>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div> -->
 </div>
  
  
