--- a/less/color.less
+++ b/less/color.less
@@ -27,6 +27,7 @@
 @orgNewGray: @repoNewGray; 
 @orgStepGray: @repoStepGray; 
 @orgStepFontGray: @repoStepFontGray; 
+@repoDetailGray:#EBEBEB; //237 237 237
 @repoNewGray: #EEEEEE; // 238 238 238
 @repoFontGray: #474646; //71 70 70
 @repoFormGray: #DFDFDF; // 223 223 223
