--- a/css/app.css
+++ b/css/app.css
@@ -652,72 +652,198 @@ body {
 }
 /* repo create end */
 /* repo detail start */
-#repoDetail .praise {
-  text-align: center;
-  font-size: 22px;
-  margin-bottom: 50px;
+#repoDetail .form-control:focus {
+  border-color: inherit;
+  outline: 0;
+  -webkit-box-shadow:none;
+          box-shadow:none;
 }
-#repoDetail .praise i {
-  font-size: 24px;
-  margin-left: 10px;
+
+
+#repoDetail .header{
+  padding-top:8px;
+  padding-bottom:8px;
 }
-#repoDetail .space {
-  width: 94%;
-  margin-left: 3%;
-  margin-bottom: 50px;
-  font-size: 16px;
-  background: #fff;
+#repoDetail .fa-star{
+  cursor:pointer;
 }
-#repoDetail .expend {
+#repoDetail .header .repo-name{
+  font-size:15px;
+  color:#191919;
+}
+
+#repoDetail .header .repo-user{
+  color:#667a9c;
+  font-size:20px;
+  padding:6px 0;
+}
+
+#repoDetail .header .repo-status{
+  color:#878787;
+  font-size:14px;
+}
+
+#repoDetail .repo-nav {
+  background-color: #CCCCCC;
+}
+
+
+#repoDetail .clear-padding-left{
+  padding-left:0;
+}
+.repo-nav .nav-tabs > li > a:hover,
+.repo-nav .nav-tabs > li > a:focus{
+  background-color:#ddd;
+  border:0;
+}
+
+.repo-nav .nav-tabs.nav-justified>li>a,.repo-nav .nav-tabs.nav-justified>.active>a:hover{
+  border-radius:0;
+  border:0;
+}
+.repo-nav .nav-tabs.nav-justified>.active>a,
+.repo-nav .nav-tabs.nav-justified > .active > a:hover,
+.repo-nav .nav-tabs.nav-justified > .active > a:focus{
+  background-color:#2c374b;
+  color:#fff;
+  border:0;
+}
+
+.repo-content{
+  background-color:#dedede;
+  height:100%;
+}
+.bast-info{
+  position:relative;
+  padding-top:20px;
+}
+.bast-info h5{
+  padding:2px 10px;
+  position:relative;
+}
+.bast-info h5 .fa-pencil{
+  position:absolute;
+  right:10px;
+  top:5px;
+  font-size:20px;
+  cursor:pointer;
+}
+.bast-info .ok-btn{
+  display:none;
+  background-color:#3da1e5;
+  padding:8px 30px;
+  border-radius:4px;
+  color:#fff;
+  font-size:14px;
+  margin-top:10px;
+}
+.bast-info textarea {
+  resize: none;
+  border:1px solid #ccc;
+  border-radius:4px;
+  width:100%;
+  padding:5px 10px;
+  font-size:14px;
+  box-shadow:inset 0 1px 2px rgba(0,0,0,0.075);
+}
+.bast-info textarea.pull-command-text{
+  border-bottom-color:#d46354;
+  border-bottom-width:2px;
+}
+
+
+.bast-info .make-public{
+  float:right;
+  display:inline-block;
+  width:182px;
+}
+
+.bast-info .make-public-btn{
+  background-color:#3da1e5;
+  width:100%;
+  display:inline-block;
+  text-align:center;
+  color:#fff;
+  padding-top:10px;
+  padding-bottom:10px;
+  border-radius:4px;
+}
+
+.bast-info .make-public-h5{
+  padding-left:0;
+  padding-right:0;
+}
+
+.bast-info .delete-repo-btn{
+  background-color:#c39287;
+  width:182px;
+  display:inline-block;
+  text-align:center;
+  color:#f7f7f7;
+  padding-top:10px;
+  padding-bottom:10px;
+  border-radius:4px;
   position: absolute;
-  right: 0;
-  top: 0;
-  z-index: 10000;
-  font-size: 20px;
-  color: #fff;
-  height: 100%;
-  width: 30px;
-  line-height: 40px;
-  text-align: center;
+  right:0;
+  bottom:15px;
 }
-#repoDetail .space > a {
-  display: block;
-  background: #000;
-  color: #fff;
-  height: 44px;
-  line-height: 44px;
-  padding: 0 12px;
-  position: relative;
+
+#tags{
+  padding-top:30px;
 }
-#info {
-  padding: 12px;
+
+#collaborators{
+  padding-top:30px;
 }
-#info .command {
-  background: #eaeaea;
-  color: #DFDFDF;
-  padding: 5px 10px;
+#collaborators .remove{
+  color:#a9200d;
 }
-#info h4 {
-  position: relative;
+#collaborators .left-block{
+  padding:0;
+  width:60%;
+  float:left;
+  display:inline-block;
 }
-#info .copy {
-  position: absolute;
-  right: -4px;
-  top: -7px;
-  z-index: 10000;
-  background: #d7d7d7;
-  padding: 5px;
+
+#collaborators .right-block{
+  padding:0;
+  width:35%;
+  float:right;
+  display:inline-block;
 }
-#info .desc {
-  background: #eaeaea;
-  padding: 5px 10px;
-  margin-top: 10px;
+#collaborators .right-block h5{
+  padding-left:8px;
 }
-#info li {
-  margin-top: 10px;
+
+#collaborators .form-control{
+  border:0;
 }
-#info .desc #orgList,
-#repoDetail {
+
+#collaborators .input-group-addon{
+  background-color:#f77462;
+  padding:0 12px;
+  color:#fff;
+  border:0;
+}
+
+#collaborators .fa-plus{
+  padding:0 12px;
+}
+
+#buildHistory {
+  padding-top:30px;
+}
+#buildHistory .fa-trash-o{
+  color:#f77462;
+  cursor:pointer;
+}
+#buildHistory a{
+  color:#3d76cc;
+}
+
+/* repo detail end */
+/* org list start */
+#orgList {
   margin-top: 50px;
 }
 #orgList,
@@ -1413,4 +1539,3 @@ body {
   color: #0e5585;
 }
 /* sign in & sign up end */
-/*# sourceMappingURL=app.css.map */
